# go-pdfium-render

./: .gitignore  CMakeLists.txt  README.md  main.go  render.go
cgo_experiments/experiment1/: bridge.c  bridge.h  main.go
cgo_experiments/experiment1/test/: test.c
cgo_experiments/experiment2/: experiment2  main.go
src/: CMakeLists.txt  main.cpp
