cmake_minimum_required(VERSION 3.2)

find_package(PDFium REQUIRED)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -O3")

set(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR})

set(PDFIUMTK_INSTALL_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
set(PDFIUMTK_INSTALL_BIN_DIR ${PROJECT_SOURCE_DIR}/bin)
set(PDFIUMTK_INSTALL_LIB_DIR ${PROJECT_SOURCE_DIR}/lib)

include_directories(${PDFIUMTK_INSTALL_INCLUDE_DIR})

add_subdirectory(src)
